feat: added tls support to traefik

--- a/playbooks/deploy/roles/traefik/templates/traefik.yml.j2
+++ b/playbooks/deploy/roles/traefik/templates/traefik.yml.j2
@@ -18,11 +18,6 @@ services:
       - "./config/traefik.static.toml:/etc/traefik/traefik.static.toml"
       # dynamic config
       - "./config/traefik.dynamic.toml:/etc/traefik/traefik.dynamic.toml"
-      # certificates config
-      # - "./certificates/certificates.toml:/configs/certificates.toml"
-      # - "{{ plugins_dir }}/plugins:/plugins-local"
-      # - "{{ certs_dir }}/fullchain.pem:/certificates/{{ app_domain }}.pem" 
-      # - "{{ certs_dir }}/privKey.pem:/certificates/{{ app_domain }}.private"
     networks:
       apps:
         aliases:
@@ -33,14 +28,21 @@ services:
         constraints:
           - node.labels.app-traefik == true
       labels:
-        - "traefik.enable=true"
+        {% if traefik_domain | length > 0 -%}
+        - "traefik.http.routers.traefik-dashboard.rule=Host(`{{ traefik_domain }}`)"
+        - traefik.http.routers.traefik-dashboard.tls=true
+        - traefik.http.routers.traefik-dashboard.tls.certresolver=letsencrypt
+        {% else -%}
         - "traefik.http.routers.traefik-dashboard.rule=PathPrefix(`/`) && Header(`X-INFRA-SERVICE`, `traefik-dashboard`)"
+        {% endif %}
+
         {% if infra_ipwhitelist | length > 0 -%}
         - "traefik.http.routers.traefik-dashboard.middlewares=traefik-auth,traefik-ipwhitelist"
         - "traefik.http.middlewares.traefik-ipwhitelist.ipwhitelist.sourcerange={{ infra_ipwhitelist }}"
         {% else -%}
         - "traefik.http.routers.traefik-dashboard.middlewares=traefik-auth"
         {% endif -%}
+        - "traefik.enable=true"
         - "traefik.http.middlewares.traefik-auth.basicauth.users=admin:$$2y$$05$$bHwn0PZx04WxbwCGsCRPGeKtscimvVUXckLA2CWgXM4h92xyP7mte" # @dm1n123
         - "traefik.http.routers.traefik-dashboard.entrypoints=http,https"
         - "traefik.http.routers.traefik-dashboard.service=api@internal"
