fix: fixed traefik static config entrypoint

--- a/playbooks/deploy/roles/traefik/templates/config/traefik.static.toml.j2
+++ b/playbooks/deploy/roles/traefik/templates/config/traefik.static.toml.j2
@@ -13,7 +13,7 @@
         address = ":80"
     [entrypoints.https]
         address = ":443"
-        [entrypoints.websecure.http.tls]
+        [entrypoints.https.http.tls]
     # TODO: add other entrypoints here
 
 [log]
