--- a/playbooks/deploy/roles/hi-tech-api/templates/hi-tech-api.yml.j2
+++ b/playbooks/deploy/roles/hi-tech-api/templates/hi-tech-api.yml.j2
@@ -8,7 +8,7 @@ services:
       - DATABASE_NAME=hi_tech
       - DATABASE_USERNAME=postgres
       - DATABASE_PASSWORD={{ db_password }}
-      - PUBLIC_URL=http://localhost:1337
+      - PUBLIC_URL=https://{{ hi_tech_domain }}/backend
       - DATABASE_SSL=false
       - DATABASE_SSL_SELF=false
       - HOST=0.0.0.0
