--- a/playbooks/deploy/roles/shepherd/templates/shepherd.yml.j2
+++ b/playbooks/deploy/roles/shepherd/templates/shepherd.yml.j2
@@ -7,16 +7,18 @@ services:
   service:
     image: "{{ docker_registry }}containrrr/shepherd"
     environment:
-      SLEEP_TIME: "3m"
+      SLEEP_TIME: "10m"
       TZ: "Asia/Almaty"
       APPRISE_SIDECAR_URL: notify:5000
       VERBOSE: "true"
       FILTER_SERVICES: "label=shepherd.autodeploy=true"
+      WITH_REGISTRY_AUTH: "true"
       IMAGE_AUTOCLEAN_LIMIT: "3"
       ROLLBACK_ON_FAILURE: "true"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /etc/docker:/etc/docker:ro
+      - {{ docker_registry_config_path }}:/root/.docker/config.json:ro
     networks:
       - notification
     deploy:
