--- a/playbooks/deploy/roles/hi-tech-ui/templates/hi-tech-ui.yml.j2
+++ b/playbooks/deploy/roles/hi-tech-ui/templates/hi-tech-ui.yml.j2
@@ -3,7 +3,7 @@ services:
     image: blinkker/hi-tech:dev
     environment:
       - NEXT_PUBLIC_API_URL=https://{{ hi_tech_backend_domain }}/api
-      - NEXT_PUBLIC_BACKEND_HOST={{ hi_tech_backend_domain }}/
+      - NEXT_PUBLIC_BACKEND_HOST={{ hi_tech_backend_domain }}
       - NEXT_PUBLIC_BACKEND_PORT=443
       - STRAPI_API_TOKEN={{ strapi_api_token }}
       - NODE_ENV=production
